--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Headphones</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -19,97 +19,34 @@
                 <li><a href="#">DE</a></li>
             </ul>
         </nav>
-        <section>
+        <section class="heroSection">
             <h1>Go beyond music. Immerse your senses through vibration.</h1>
             <img src="assets/img/section-about-1.jpg" alt="hero section">
         </section>
-    </header>
-    <main>
         <aside>
             <ul>
                 <li><a href="#">ABOUT</a></li>
-                <li><a href="#">LOUNGER</a></li>
-                <li><a href="#">EXPERIENCE</a></li>
-                <li><a href="#">INSPIRATION</a></li>
-                <li><a href="#">SHOP</a></li>
+                <li><a href="../Headphones/lounger.html">LOUNGER</a></li>
+                <li><a href="../Headphones/experience.html">EXPERIENCE</a></li>
+                <li><a href="../Headphones/inspiration.html">INSPIRATION</a></li>
+                <li><a href="../Headphones/shop.html">SHOP</a></li>
             </ul>
         </aside>
+    </header>
+    <main>
         <section class="about">
             <div>
-                <img src="assets/img/BS1_NYC_Home.webp" alt="vase">
+                <img src="assets/img/BS1_NYC_Home.webp" alt="designAlchemy">
             </div>
             <div>
                 <h2>DESIGN ALCHEMY</h2>
-                <p>The fundamentals of good design are eternal. Innovation is essential. We balance rigorous design with an openness to experimentation in our mission to create products that enrich your life. The creation of an excellent product is not a matter of simple fabrication. Our long heritage of master craftsmanship, from the materials we select to how we craft each product, imbues everything we make with precision and feeling.
-            </p>
-            </div>
-        </section>
-        <section class="lounger">
-            <div>
-                <img src="assets/img/section-voyager.jpg" alt="lounger">
-            </div>
-            <div>
-                <h2>The Lounger</h2>
-                <p>The Lounger is your trans-sensory vessel to audio-haptic pleasure. Precision sculpted from luxe material, this high-tech pod is calibrated for comfort and inspired by the Japanese art of origami. Through its seamlessly integrated tablet, it delivers a rich and varied playlist of full-body experiences, with tracks updated monthly. Produced in the Eu, this limited edition lounger is suitable for events, clubs, airlines, hotels, workplaces and indulgence-seeking individuals. Available from February 2018
-
+                <p>
+                The fundamentals of good design are eternal. Innovation is essential. We balance rigorous design with an openness to experimentation in our mission to create products that enrich your life.</p> 
+                <p>The creation of an excellent product is not a matter of simple fabrication. Our long heritage of master craftsmanship, from the materials we select to how we craft each product, imbues everything we make with precision and feeling.
                 </p>
             </div>
-        </section>
-        <section class="experience">
-            <div>
-                <img src="assets/img/section-experience-1.jpg" alt="experience">
-            </div>
-            <div>
-                <h2>Sounds Like Home</h2>
-                <p>There’s this feeling. It’s like your favorite song; like home. Maybe it’s hard to explain, but you know it. It’s when everything is in sync and you are free to decompress, create, design, entertain. It’s that atmosphere created when every element comes together in perfect harmony. When it comes to composing a home, people explore design differently to curate their space. And the beauty of that freedom is that there is more than one correct answer. As long as you pick elements that make you feel at home, you’re on the right track. Maybe it’s a lamp, or a chair. Maybe even a plant, or the music playing in the background. These things aren’t just there by chance - they mean something.
-                </p>
-            </div>
-        </section>
-        <section class="inspiration">
-            <img src="assets/img/Magical_Home.mp4" alt="video">
-            <article>
-                <h3>AN ALCHEMY OF DESIGN, CRAFT AND SOUND. </h3>
-                <h4>Exist to Create.</h4>
-                <span>SOUND</span>
-                <span>DESIGN</span>
-                <span>CRAFT</span>
-                <p>We define our world through imagination.</p>
-            </article>
-        </section>
-        <section class="gridAlchemy">
-            <div class="topLeft"><img src="assets/img/ETC_6.webp" alt="ETC6"></div>
-            <div class="topRight">
-                <h5>Sound Alchemy</h5>
-                <h6>A feeling for sound </h6>
-                <p>The power of music is without bounds, it goes straight to our hearts. Our job is to do justice to that power. We make that feeling thrive by creating the most impactful, accurate and immersive sound experience possible.
-                </p>
-            </div>
-            <div class="bottomLeft">
-                <h5>Sound Architecture </h5>
-                <h6>Everything Starts with Architecture 
-                </h6>
-                <p>Join us in a conversation among a concept developer, an acoustic engineer and a technical project manager taking us through the creation process of a new, ground breaking product
-                </p>
-            </div>  
-            <div class="bottomRight"><img src="assets/img/ETC_5.webp" alt="ETC5"></div>
         </section>
     </main>
-    <footer>
-        <section class="shop">
-            <div>
-                <img src="assets/img/section-composition4.jpg" alt="composition">
-            </div>
-            <div>
-                <img src="assets/img/h9-argilla-bright-hero-1000x1000.webp" alt="headphones">
-                <figure>
-                    <span>Beoplay H9</span>
-                    <p>Argilla Bright</p>
-                    <p>500$</p>
-                    <a href="#">BUY</a>
-                </figure>
-            </div>
-        </section>
-    </footer>
     <script src="assets/js/main.css"></script>
 </body>
 </html>
