--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
         <aside>
             <ul>
                 <li><a href="#">ABOUT</a></li>
+                <li class="strich">|</li>
                 <li><a href="../Headphones/lounger.html">LOUNGER</a></li>
+                <li class="strich">|</li>
                 <li><a href="../Headphones/experience.html">EXPERIENCE</a></li>
+                <li class="strich">|</li>
                 <li><a href="../Headphones/inspiration.html">INSPIRATION</a></li>
+                <li class="strich">|</li>
                 <li><a href="../Headphones/shop.html">SHOP</a></li>
             </ul>
         </aside>
