fixed some issues

--- a/assets/html/experience.html
+++ b/assets/html/experience.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <logo><img src="assets/img/logo.svg"></img></logo>
+            <logo><img src="../img/logo.svg"></img></logo>
             <ul>
                 <li><a href="#">Subscribe & Contact</a></li>
                 <li><a href="#">facebook</a></li>
@@ -21,11 +21,15 @@
         </nav>
         <aside>
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">LOUNGER</a></li>
-                <li><a href="#">EXPERIENCE</a></li>
-                <li><a href="#">INSPIRATION</a></li>
-                <li><a href="#">SHOP</a></li>
+                <li><a href="../html/index.html">ABOUT</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/shop.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
