--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Headphones</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <logo><img src="assets/img/logo.svg"></img></logo>
+            <logo><img src="../img/logo.svg"></img></logo>
             <ul>
                 <li><a href="#">Subscribe & Contact</a></li>
                 <li><a href="#">facebook</a></li>
@@ -21,26 +21,26 @@
         </nav>
         <section class="heroSection">
             <h1>Go beyond music. Immerse your senses through vibration.</h1>
-            <img src="assets/img/section-about-1.jpg" alt="hero section">
+            <img src="../img/section-about-1.jpg" alt="hero section">
         </section>
         <aside>
             <ul>
-                <li><a href="#">ABOUT</a></li>
+                <li><a href="../html/index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="../Headphones/lounger.html">LOUNGER</a></li>
+                <li><a href="../html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../Headphones/experience.html">EXPERIENCE</a></li>
+                <li><a href="../html/experience.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../Headphones/inspiration.html">INSPIRATION</a></li>
+                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../Headphones/shop.html">SHOP</a></li>
+                <li><a href="../html/shop.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
     <main>
         <section class="about">
             <div>
-                <img src="assets/img/BS1_NYC_Home.webp" alt="designAlchemy">
+                <img src="../img/BS1_NYC_Home.webp" alt="designAlchemy">
             </div>
             <div>
                 <h2>DESIGN ALCHEMY</h2>
