--- a/assets/html/inspiration.html
+++ b/assets/html/inspiration.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspiration</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
         <nav>
-            <logo><img src="assets/img/logo.svg"></img></logo>
+            <logo><img src="../img/logo.svg"></img></logo>
             <ul>
                 <li><a href="#">Subscribe & Contact</a></li>
                 <li><a href="#">facebook</a></li>
@@ -21,18 +21,22 @@
         </nav>
         <aside>
             <ul>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">LOUNGER</a></li>
-                <li><a href="#">EXPERIENCE</a></li>
-                <li><a href="#">INSPIRATION</a></li>
-                <li><a href="#">SHOP</a></li>
+                <li><a href="../html/index.html">ABOUT</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li class="strich">|</li>
+                <li><a href="../html/shop.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
     <main>
         <section class="inspiration">
             <video width="70%" autoplay controls>
-                <source src="assets/img/Magical_Home.mp4" type="video/mp4">
+                <source src="../img/Magical_Home.mp4" type="video/mp4">
                 
             Your browser does not support the video tag.
             </video>
@@ -47,7 +51,7 @@
         </section>
         <section class="gridInspiration">
             <div class="topLeft">
-                <img src="assets/img/ETC_6.webp" alt="ETC6">
+                <img src="../img/ETC_6.webp" alt="ETC6">
             </div>
             <div class="topRight">
                 <h5>Sound Alchemy</h5>
@@ -63,7 +67,7 @@
                 </p>
             </div>  
             <div class="bottomRight">
-                <img src="assets/img/ETC_5.webp" alt="ETC5">
+                <img src="../img/ETC_5.webp" alt="ETC5">
             </div>
         </section>
     </main>
