--- a/assets/html/newsletter.html
+++ b/assets/html/newsletter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Experience</title>
+    <title>Newsletter</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -34,22 +34,20 @@
         </aside>
     </header>
     <main>
-        <section class="shop">
-            <div>
-                <!-- <img src="assets/img/section-composition4.jpg" alt="composition"> -->
-            </div>
-            <div>
-                <img src="../img/h9-argilla-bright-hero-1000x1000.webp" alt="headphones">
-                <figure>
-                    <h3>Beoplay H9</h3>
-                    <p>Argilla Bright</p>
-                    <p>500$</p>
-                    <div class="buy">
-                        <a href="#">Buy</a>
-                    </div>
-                </figure>
+        <section>
+            <div class="newsletter">
+                <h4>Newsletter</h4>
+                <p class="signUp">Sign up for News, exclusive promotions and more</p>
+                <label for="lastName">Name</label>
+                <input type="text">
+                <label for="firstName">Vorname</label>
+                <input type="text">
+                <label for="email">E-Mail Adresse</label>
+                <input type="email">
+                <a href="#">Submit</a>
             </div>
         </section>
     </main>
+    <script src="assets/js/main.css"></script>
 </body>
 </html>
