--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -12,7 +12,7 @@
         <nav>
             <logo><img src="../img/logo.svg"></img></logo>
             <ul>
-                <li><a href="#">Subscribe & Contact</a></li>
+                <li><a href="../html/newsletter.html">Subscribe & Contact</a></li>
                 <li><a href="#">facebook</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Youtube</a></li>
