--- a/assets/html/experience.html
+++ b/assets/html/experience.html
@@ -36,11 +36,11 @@
     <main>
         <section class="experience">
             <div>
-                <!-- <img src="assets/img/section-experience-1.jpg" alt="experience"> -->
             </div>
             <div>
                 <h2>Sounds Like Home</h2>
-                <p>There’s this feeling. It’s like your favorite song; like home. Maybe it’s hard to explain, but you know it. It’s when everything is in sync and you are free to decompress, create, design, entertain. It’s that atmosphere created when every element comes together in perfect harmony. When it comes to composing a home, people explore design differently to curate their space. And the beauty of that freedom is that there is more than one correct answer. As long as you pick elements that make you feel at home, you’re on the right track. Maybe it’s a lamp, or a chair. Maybe even a plant, or the music playing in the background. These things aren’t just there by chance - they mean something.
+                <p>There’s this feeling. It’s like your favorite song; like home. Maybe it’s hard to explain, but you know it. It’s when everything is in sync and you are free to decompress, create, design, entertain. It’s that atmosphere created when every element comes together in perfect harmony.</p>
+                <p>When it comes to composing a home, people explore design differently to curate their space. And the beauty of that freedom is that there is more than one correct answer. As long as you pick elements that make you feel at home, you’re on the right track. Maybe it’s a lamp, or a chair. Maybe even a plant, or the music playing in the background. These things aren’t just there by chance - they mean something.
                 </p>
             </div>
         </section>
