--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headphones</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>Headphones 🎧</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
-            <logo><img src="../img/logo.svg"></img></logo>
+            <logo><img src="assets/img/logo.svg"></img></logo>
             <ul>
                 <li><a href="../html/newsletter.html">Subscribe & Contact</a></li>
                 <li><a href="#">facebook</a></li>
@@ -21,36 +23,40 @@
         </nav>
         <section class="heroSection">
             <h1>Go beyond music. Immerse your senses through vibration.</h1>
-            <img src="../img/section-about-1.jpg" alt="hero section">
+            <img src="assets/img/section-about-1.jpg" alt="hero section">
         </section>
         <aside>
             <ul>
-                <li><a href="../html/index.html">ABOUT</a></li>
+                <li><a href="../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li><a href="assets/html/experience.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li><a href="assets/html/inspiration.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/shop.html">SHOP</a></li>
+                <li><a href="assets/html/shop.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
     <main>
         <section class="about">
             <div>
-                <img src="../img/BS1_NYC_Home.webp" alt="designAlchemy">
+                <img src="assets/img/BS1_NYC_Home.webp" alt="designAlchemy">
             </div>
             <div>
                 <h2>DESIGN ALCHEMY</h2>
                 <p>
-                The fundamentals of good design are eternal. Innovation is essential. We balance rigorous design with an openness to experimentation in our mission to create products that enrich your life.</p> 
-                <p>The creation of an excellent product is not a matter of simple fabrication. Our long heritage of master craftsmanship, from the materials we select to how we craft each product, imbues everything we make with precision and feeling.
+                    The fundamentals of good design are eternal. Innovation is essential. We balance rigorous design
+                    with an openness to experimentation in our mission to create products that enrich your life.</p>
+                <p>The creation of an excellent product is not a matter of simple fabrication. Our long heritage of
+                    master craftsmanship, from the materials we select to how we craft each product, imbues everything
+                    we make with precision and feeling.
                 </p>
             </div>
         </section>
     </main>
     <script src="assets/js/main.css"></script>
 </body>
+
 </html>
