--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Shop</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,7 +23,7 @@
         </nav>
         <aside>
             <ul>
-                <li><a href="../html/index.html">ABOUT</a></li>
+                <li><a href="../../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
                 <li><a href="../html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
@@ -52,4 +54,5 @@
         </section>
     </main>
 </body>
+
 </html>
