--- a/assets/html/lounger.html
+++ b/assets/html/lounger.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Lounger</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,15 +23,15 @@
         </nav>
         <aside>
             <ul>
-                <li><a href="../html/index.html">ABOUT</a></li>
+                <li><a href="../../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li><a href="assets/html/lounger.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li><a href="assets/html/lounger.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/shop.html">SHOP</a></li>
+                <li><a href="assets/html/lounger.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
@@ -39,11 +41,16 @@
             </div>
             <div>
                 <h2>The Lounger</h2>
-                <p>The Lounger is your trans-sensory vessel to audio-haptic pleasure. Precision sculpted from luxe material, this high-tech pod is calibrated for comfort and inspired by the Japanese art of origami. Through its seamlessly integrated tablet, it delivers a rich and varied playlist of full-body experiences, with tracks updated monthly.</p>
-                <p>Produced in the Eu, this limited edition lounger is suitable for events, clubs, airlines, hotels, workplaces and indulgence-seeking individuals.</p>
+                <p>The Lounger is your trans-sensory vessel to audio-haptic pleasure. Precision sculpted from luxe
+                    material, this high-tech pod is calibrated for comfort and inspired by the Japanese art of origami.
+                    Through its seamlessly integrated tablet, it delivers a rich and varied playlist of full-body
+                    experiences, with tracks updated monthly.</p>
+                <p>Produced in the Eu, this limited edition lounger is suitable for events, clubs, airlines, hotels,
+                    workplaces and indulgence-seeking individuals.</p>
                 <p>Available from February 2018</p>
             </div>
         </section>
     </main>
 </body>
+
 </html>
