--- a/assets/html/newsletter.html
+++ b/assets/html/newsletter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Newsletter</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,15 +23,15 @@
         </nav>
         <aside>
             <ul>
-                <li><a href="../html/index.html">ABOUT</a></li>
+                <li><a href="../../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li><a href="assets/html/lounger.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li><a href="assets/html/lounger.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/shop.html">SHOP</a></li>
+                <li><a href="assets/html/lounger.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
@@ -50,4 +52,5 @@
     </main>
     <script src="assets/js/main.css"></script>
 </body>
+
 </html>
