--- a/assets/html/inspiration.html
+++ b/assets/html/inspiration.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Inspiration</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,15 +23,15 @@
         </nav>
         <aside>
             <ul>
-                <li><a href="../html/index.html">ABOUT</a></li>
+                <li><a href="../../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li><a href="assets/html/lounger.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li><a href="assets/html/lounger.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/shop.html">SHOP</a></li>
+                <li><a href="assets/html/lounger.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
@@ -37,8 +39,8 @@
         <section class="inspiration">
             <video width="70%" autoplay controls>
                 <source src="../img/Magical_Home.mp4" type="video/mp4">
-                
-            Your browser does not support the video tag.
+
+                Your browser does not support the video tag.
             </video>
             <article>
                 <h3>AN ALCHEMY OF DESIGN, CRAFT AND SOUND. </h3>
@@ -56,20 +58,24 @@
             <div class="topRight">
                 <h5>Sound Alchemy</h5>
                 <h6>A feeling for sound </h6>
-                <p>The power of music is without bounds, it goes straight to our hearts. Our job is to do justice to that power. We make that feeling thrive by creating the most impactful, accurate and immersive sound experience possible.
+                <p>The power of music is without bounds, it goes straight to our hearts. Our job is to do justice to
+                    that power. We make that feeling thrive by creating the most impactful, accurate and immersive sound
+                    experience possible.
                 </p>
             </div>
             <div class="bottomLeft">
                 <h5>Sound Architecture</h5>
-                <h6>Everything Starts with Architecture 
+                <h6>Everything Starts with Architecture
                 </h6>
-                <p>Join us in a conversation among a concept developer, an acoustic engineer and a technical project manager taking us through the creation process of a new, ground breaking product
+                <p>Join us in a conversation among a concept developer, an acoustic engineer and a technical project
+                    manager taking us through the creation process of a new, ground breaking product
                 </p>
-            </div>  
+            </div>
             <div class="bottomRight">
                 <img src="../img/ETC_5.webp" alt="ETC5">
             </div>
         </section>
     </main>
 </body>
+
 </html>
