--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -25,13 +25,13 @@
             <ul>
                 <li><a href="../../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/lounger.html">LOUNGER</a></li>
+                <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li><a href="assets/html/lounger.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li><a href="assets/html/lounger.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/shop.html">SHOP</a></li>
+                <li><a href="assets/html/lounger.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
