--- a/assets/html/lounger.html
+++ b/assets/html/lounger.html
@@ -27,11 +27,11 @@
                 <li class="strich">|</li>
                 <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="assets/html/lounger.html">EXPERIENCE</a></li>
+                <li><a href="../html/experience.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="assets/html/lounger.html">INSPIRATION</a></li>
+                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="assets/html/lounger.html">SHOP</a></li>
+                <li><a href="../html/shop.html">SHOP</a></li>
             </ul>
         </aside>
     </header>
