updated active link

--- a/assets/html/experience.html
+++ b/assets/html/experience.html
@@ -27,7 +27,7 @@
                 <li class="strich">|</li>
                 <li><a href="../html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/experience.html">EXPERIENCE</a></li>
+                <li><a href="../html/experience.html" class="active">EXPERIENCE</a></li>
                 <li class="strich">|</li>
                 <li><a href="../html/inspiration.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
