--- a/assets/html/inspiration.html
+++ b/assets/html/inspiration.html
@@ -29,7 +29,7 @@
                 <li class="strich">|</li>
                 <li><a href="../html/experience.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/inspiration.html">INSPIRATION</a></li>
+                <li><a href="../html/inspiration.html" class="active">INSPIRATION</a></li>
                 <li class="strich">|</li>
                 <li><a href="../html/shop.html">SHOP</a></li>
             </ul>
