--- a/assets/html/shop.html
+++ b/assets/html/shop.html
@@ -31,7 +31,7 @@
                 <li class="strich">|</li>
                 <li><a href="../html/inspiration.html">INSPIRATION</a></li>
                 <li class="strich">|</li>
-                <li><a href="../html/shop.html">SHOP</a></li>
+                <li><a href="../html/shop.html" class="active">SHOP</a></li>
             </ul>
         </aside>
     </header>
