--- a/assets/html/lounger.html
+++ b/assets/html/lounger.html
@@ -25,7 +25,7 @@
             <ul>
                 <li><a href="../../index.html">ABOUT</a></li>
                 <li class="strich">|</li>
-                <li><a href="assets/html/lounger.html">LOUNGER</a></li>
+                <li><a href="assets/html/lounger.html" class="active">LOUNGER</a></li>
                 <li class="strich">|</li>
                 <li><a href="../html/experience.html">EXPERIENCE</a></li>
                 <li class="strich">|</li>
