--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </section>
         <aside>
             <ul>
-                <li><a href="../index.html">ABOUT</a></li>
+                <li><a href="../index.html" class="active">ABOUT</a></li>
                 <li class="strich">|</li>
                 <li><a href="assets/html/lounger.html">LOUNGER</a></li>
                 <li class="strich">|</li>
